submission-akhir/order-service/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: e-commerce-app
    service: order-service
  namespace: prod-ns
spec:
  ports:
  - name: order
    protocol: TCP
    port: 3000
  selector:
    service: order
    app: e-commerce-app
  type: NodePort
